dev(permissions): Add permissions repository
