# routes/api.php
@@ -4,6 +4,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\AuthController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\RoleController;
+use App\Http\Controllers\PermissionController;
 
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
@@ -16,5 +18,10 @@ Route::middleware('auth:sanctum')->group(function () {
 
     Route::middleware(['role:Admin|Super Admin'])->group(function () {
         Route::apiResource('users', UserController::class)->except(['store']);
+    });
+
+    Route::middleware(['role:Super Admin'])->group(function () {
+        Route::apiResource('roles', RoleController::class);
+        Route::get('permissions', [PermissionController::class, 'index']);
     });
 }); 
